# Sozvezdie_2

./: .gitignore  CMakeLists.txt  Server.cpp  Server.h  main.cpp  socketrunnable.cpp  socketrunnable.h  socketthread.cpp  socketthread.h
